# latex-preview

./: .gitignore  PRD.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Editor.tsx  Preview.tsx  StatusBar.tsx  SymbolBar.tsx  SymbolPanel.tsx  SymbolSearch.tsx  Toolbar.tsx
src/contexts/: SettingsContext.tsx  ThemeContext.tsx
src/hooks/: useSession.ts
src/themes/: index.ts
src/types/: index.ts
src/utils/: export.ts  latex.ts  snippet.ts  symbolDb.ts
tests/: export.test.ts  latex.test.ts  setup.ts  snippet.test.ts  symbolDb.test.ts  themes.test.ts
