[package]
name = "latex-preview"
version = "1.0.0"
description = "LaTeX Preview Desktop App"
authors = [""]
edition = "2021"

[lib]
name = "latex_preview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
